feat: adapt to new design

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <title>Mixa</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;700&family=Roboto:wght@300;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
@@ -267,10 +264,9 @@
         <div class="es-cross__product">
           <div class="es-cross__content">
             <p class="es-cross__number es-cross__number--1">1</p>
-            <p class="es-cross__step">krok <br />Oczyszczenie</p>
+            <p class="es-cross__step">Oczyszczenie</p>
             <p class="es-cross__text">
-              Zmyj makijaż i oczyść twarz płynem micelarnym Optymalna Tolerancja
-              i przygotuj skórę na dalszą pielęgnację.
+              Zmyj makijaż i oczyść twarz płynem micelarnym Optymalna Tolerancja i&nbsp;przygotuj skórę na dalszą pielęgnację.
             </p>
             <a href="" target="_blank" class="es-cross__link">sprawdź</a>
           </div>
@@ -282,7 +278,7 @@
           <div class="es-cross__content">
             <p class="es-cross__number es-cross__number--2">2</p>
             <p class="es-cross__step">
-              krok <br />Skoncentrowana<br />
+              Skoncentrowana<br />
               pielęgnacja
             </p>
             <p class="es-cross__text">
@@ -299,12 +295,12 @@
           <div class="es-cross__content">
             <p class="es-cross__number es-cross__number--3">3</p>
             <p class="es-cross__step">
-              krok <br />intensywne<br />
+              intensywne<br />
               nawilżenie
             </p>
             <p class="es-cross__text">
               Zadbaj o nawilżenie skóry przez 24h, dzięki bogatemu kremowi na
-              dzień oraz kremowi-masce na noc z linii Hyalurogel.
+              dzień oraz kremowi-masce na noc z&nbsp;linii Hyalurogel.
             </p>
             <a href="" target="_blank" class="es-cross__link">sprawdź</a>
           </div>
@@ -347,9 +343,7 @@
                     <strong>Cudowny!</strong><br /><br />
 
                     “Serum jest w pięknej szklanej buteleczce, pięknie
-                    prezentuje się w łazience.<br /><br />
-
-                    Jako produkt jest fantastyczne. Świetnie nawilża podrażnioną
+                    prezentuje się w łazience. Jako produkt jest fantastyczne. Świetnie nawilża podrażnioną
                     skórę. Skóra jest po serum gładka, jędrna. Idealny do skóry
                     wrażliwej.”<br /><br />
 
