--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="es-benefits">
         <div class="es-benefits__container">
           <div class="es-benefits__image">
-            <img src="./images/photo-benefits.png" alt="" class="es-benefits__img es-benefits__img--image" />
+            <img src="./images/photo-benefits.jpg" alt="" class="es-benefits__img es-benefits__img--image" />
           </div>
           <div class="es-benefits__content">
             <div class="es-benefits__benefit">
@@ -131,7 +131,7 @@
             </div>
           </div>
           <div class="es-features__image">
-            <img src="./images/photo-features.png" alt="" class="es-features__img" />
+            <img src="./images/photo-features.jpg" alt="" class="es-features__img" />
           </div>
         </div>
       </div>
@@ -140,7 +140,7 @@
         <p class="es-info__title">Potwierdzona skuteczność</p>
         <div class="es-info__container">
           <div class="es-info__image">
-            <img src="./images/photo-info.png" alt="" class="es-info__img es-info__img--image" />
+            <img src="./images/photo-info.jpg" alt="" class="es-info__img es-info__img--image" />
           </div>
           <div class="es-info__info">
             <div class="es-info__content">
